--- a/js-numerals/numberconversion/src/Components/InputField/styles.scss
+++ b/js-numerals/numberconversion/src/Components/InputField/styles.scss
@@ -4,12 +4,19 @@
     .MuiOutlinedInput-root {
         background: $SecondaryColor20;
     }
+    .MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline {
+        border-color: $PrimaryColorLight;
+    }
     .MuiOutlinedInput-notchedOutline {
         border-width: 0;
     }
+
     .MuiInputLabel-outlined.MuiInputLabel-shrink {
         border-radius: 4px;
         padding: 0 4px 0 4px;
         background-color: $SecondaryColor20;
+    }
+    .MuiInputLabel-outlined.MuiInputLabel-shrink {
+        color: $PrimaryColorLight
     }
 }
